objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AAATask__c</fullName>
        <label>AAATask</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Custom_field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Custom field 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Custom_field_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Custom field 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Custom_field_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Custom field 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Time__c</fullName>
        <label>Next Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Juernes</fullName>
                </value>
                <value>
                    <fullName>SuSuSunday</fullName>
                </value>
                <value>
                    <fullName>Momomonday</fullName>
                </value>
                <value>
                    <fullName>TuTuTuesday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>add_metadata_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>add metadata 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>add_metadata_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>add metadata 2</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>